force-app/main/default/objects/Campaign/fields/Additional_Tags__c.field-meta.xml
<CustomField>
    <fullName>Additional_Tags__c</fullName>
    <description>SDS-2797:Campaign MGMT: Phase2 Enhancement Request</description>
    <label>Additional Tags</label>
    <type>TextArea</type>
</CustomField>