force-app/main/default/objects/Campaign/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <description>SDS-2797:Campaign MGMT: Phase2 Enhancement Request</description>
    <label>Audience</label>
    <length>100</length>
    <type>Text</type>
</CustomField>