force-app/main/default/objects/Campaign/fields/Campaign_Content__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Content__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDS-2797</description>
    <label>Campaign Content</label>
    <referenceTo>Campaign_Content__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>