force-app/main/default/objects/Campaign/fields/Campaign_Number__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Number__c</fullName>
    <description>SDS-1626: Sales/Marketing: Create an auto number on Campaigns</description>
    <displayFormat>MC-{000000}</displayFormat>
    <label>Campaign Number</label>
    <type>AutoNumber</type>
</CustomField>