force-app/main/default/objects/Campaign/fields/LeanData__Reporting_Average_Days_To_Close__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Reporting_Average_Days_To_Close__c</fullName>
    <label>Reporting Average Days to Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>