force-app/main/default/objects/Campaign/fields/LeanData__Reporting_MT_Attribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Reporting_MT_Attribution_Amount__c</fullName>
    <label>LD MT Attribution</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>