force-app/main/default/objects/Campaign/fields/LeanData__Reporting_Num_Target_Campaign_Members__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Reporting_Num_Target_Campaign_Members__c</fullName>
    <label>Reporting Num Target CM (Deprecated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>