force-app/main/default/objects/Campaign/fields/LeanData__Reporting_Opportunity_Close_Rate__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Reporting_Opportunity_Close_Rate__c</fullName>
    <label>Reporting Opportunity Close Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>