force-app/main/default/objects/Campaign/fields/Link_to_Key_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Key_Deliverable__c</fullName>
    <description>SDS-2646</description>
    <inlineHelpText>Add a link to the key deliverable for this campaign, such as the CIB, social media kit, or webinar.</inlineHelpText>
    <label>Link to Key Deliverable</label>
    <type>Url</type>
</CustomField>