force-app/main/default/objects/Campaign/fields/Link_to_Planning_Document__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Planning_Document__c</fullName>
    <description>SDS-2646</description>
    <inlineHelpText>Add a link to the planning document for this campaign, such as the POR or the JIRA ticket.</inlineHelpText>
    <label>Link to Planning Document</label>
    <type>Url</type>
</CustomField>