force-app/main/default/objects/Campaign/fields/Marketing_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Vertical__c</fullName>
    <description>SDS-2797:Campaign MGMT: Phase2 Enhancement Request</description>
    <label>Marketing Vertical</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VT01_Aerospace</fullName>
            </value>
            <value>
                <fullName>VT02_AEC</fullName>
            </value>
            <value>
                <fullName>VT03_Auto</fullName>
            </value>
            <value>
                <fullName>VT04_CSP</fullName>
            </value>
            <value>
                <fullName>VT05_Consulting Services</fullName>
            </value>
            <value>
                <fullName>VT06_CRISP</fullName>
            </value>
            <value>
                <fullName>VT07_K-12</fullName>
            </value>
            <value>
                <fullName>VT08_Enterprise SW</fullName>
            </value>
            <value>
                <fullName>VT09_FSI</fullName>
            </value>
            <value>
                <fullName>VT10_Game Development</fullName>
            </value>
            <value>
                <fullName>VT11_Hardware / Semiconductor</fullName>
            </value>
            <value>
                <fullName>VT12_Healthcare - Overall</fullName>
            </value>
            <value>
                <fullName>VT13_Healthcare - Instruments</fullName>
            </value>
            <value>
                <fullName>VT14_Healthcare - Medical Imaging</fullName>
            </value>
            <value>
                <fullName>VT15_Healthcare - vGPU</fullName>
            </value>
            <value>
                <fullName>VT16_HER</fullName>
            </value>
            <value>
                <fullName>VT17_Industrial Manufacturing</fullName>
            </value>
            <value>
                <fullName>VT18_IT Services</fullName>
            </value>
            <value>
                <fullName>VT19_Logistics &amp; Transportation</fullName>
            </value>
            <value>
                <fullName>VT20_M&amp;E</fullName>
            </value>
            <value>
                <fullName>VT21_Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>VT22_Public Sector</fullName>
            </value>
            <value>
                <fullName>VT23_Retail &amp; CPG</fullName>
            </value>
            <value>
                <fullName>VT24_Smart Cities</fullName>
            </value>
            <value>
                <fullName>VT25_Supercomputing</fullName>
            </value>
            <value>
                <fullName>VT26_Telecommunications</fullName>
            </value>
            <value>
                <fullName>VT27_Data Science</fullName>
            </value>
            <value>
                <fullName>VT28_Healthcare - Drug Discovery</fullName>
            </value>
            <value>
                <fullName>VT29_Healthcare - Genomics</fullName>
            </value>
            <value>
                <fullName>VT30_MFG Product Design</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>