force-app/main/default/objects/Campaign/fields/NMF_ID__c.field-meta.xml
<CustomField>
    <fullName>NMF_ID__c</fullName>
    <description>SDS-2646</description>
    <label>NMF ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>