force-app/main/default/objects/Campaign/fields/Objective_Type__c.field-meta.xml
<CustomField>
    <fullName>Objective_Type__c</fullName>
    <description>SDS-2797:Campaign MGMT: Phase2 Enhancement Request</description>
    <label>Objective Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thought leadership &amp; Awareness</fullName>
            </value>
            <value>
                <fullName>Consideration</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Partner / Sales Enablement</fullName>
            </value>
            <value>
                <fullName>Ecosystem Engagement &amp; Advocacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>