force-app/main/default/objects/Campaign/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>SDS-2646</description>
    <label>PO Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>