force-app/main/default/objects/Campaign/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <description>SDS-2797:Campaign MGMT: Phase2 Enhancement Request</description>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A10</fullName>
            </value>
            <value>
                <fullName>A30</fullName>
            </value>
            <value>
                <fullName>A4</fullName>
            </value>
            <value>
                <fullName>A40</fullName>
            </value>
            <value>
                <fullName>Aerial</fullName>
            </value>
            <value>
                <fullName>BFA10</fullName>
            </value>
            <value>
                <fullName>BlueField DPU</fullName>
            </value>
            <value>
                <fullName>Clara</fullName>
            </value>
            <value>
                <fullName>ConnectX</fullName>
            </value>
            <value>
                <fullName>CUDA-X</fullName>
            </value>
            <value>
                <fullName>DC Platform</fullName>
                <isActive>false</isActive>
                <label>DC Platform</label>
            </value>
            <value>
                <fullName>DGX</fullName>
            </value>
            <value>
                <fullName>DGX A100</fullName>
            </value>
            <value>
                <fullName>DGX POD</fullName>
            </value>
            <value>
                <fullName>DGX Station A100</fullName>
            </value>
            <value>
                <fullName>DGX SuperPOD</fullName>
            </value>
            <value>
                <fullName>DOCA</fullName>
            </value>
            <value>
                <fullName>DRIVE</fullName>
            </value>
            <value>
                <fullName>EGX</fullName>
            </value>
            <value>
                <fullName>EGX A100</fullName>
            </value>
            <value>
                <fullName>Enterprise AI SW Suite</fullName>
            </value>
            <value>
                <fullName>Ethernet Adapters &amp; DPUs</fullName>
            </value>
            <value>
                <fullName>Ethernet Switches</fullName>
            </value>
            <value>
                <fullName>Fleet Command</fullName>
            </value>
            <value>
                <fullName>GeForce NOW</fullName>
            </value>
            <value>
                <fullName>HGX</fullName>
            </value>
            <value>
                <fullName>HGX A100</fullName>
            </value>
            <value>
                <fullName>Infiniband</fullName>
            </value>
            <value>
                <fullName>Isaac</fullName>
            </value>
            <value>
                <fullName>Jarvis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>