force-app/main/default/objects/Campaign/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <description>SDS-2797:Campaign MGMT: Phase2 Enhancement Request</description>
    <inlineHelpText>Captures workload, technology, and business solution.</inlineHelpText>
    <label>Topic</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Data Analytics</fullName>
            </value>
            <value>
                <fullName>Data Center</fullName>
            </value>
            <value>
                <fullName>Edge AI</fullName>
            </value>
            <value>
                <fullName>Inference</fullName>
            </value>
            <value>
                <fullName>Ray Tracing</fullName>
            </value>
            <value>
                <fullName>Remote Collaboration</fullName>
            </value>
            <value>
                <fullName>Virtualization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>