force-app/main/default/objects/Campaign/fields/Uber_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Uber_Campaign__c</fullName>
    <description>SDS-2646</description>
    <label>Uber Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AI for Developer</fullName>
            </value>
            <value>
                <fullName>AI for Enterprise</fullName>
            </value>
            <value>
                <fullName>Healthcare Campaign</fullName>
            </value>
            <value>
                <fullName>HPC Campaign</fullName>
            </value>
            <value>
                <fullName>Manufacturing Campaign</fullName>
            </value>
            <value>
                <fullName>NVIDIA Accelerated Data Science</fullName>
            </value>
            <value>
                <fullName>Remote Work with NVIDIA</fullName>
            </value>
            <value>
                <fullName>RTX Everywhere</fullName>
            </value>
            <value>
                <fullName>vGPU for Every Workload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>