force-app/main/default/objects/Campaign/listViews/New_Campaigns_Created_This_Week.listView-meta.xml
<ListView>
    <fullName>New_Campaigns_Created_This_Week</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Campaign_Number__c</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>NMF_ID__c</columns>
    <columns>PO_Number__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>PARENT_NAME</columns>
    <columns>Uber_Campaign__c</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>New Campaigns Created - This Week</label>
</ListView>